--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.89:1.8": "„Werter Khemaka, die Altehrwürdigen hoffen, ",
   "sn22.89:1.9": "es geht dir leidlich, sie hoffen, du kommst zurecht. Und sie hoffen, dass der Schmerz nachlässt und nicht zunimmt, dass ein Nachlassen erkennbar ist, kein Zunehmen.“ ",
   "sn22.89:1.10": "„Werter Freund, es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen.“ ",
-  "sn22.89:2.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie entgegneten: "
+  "sn22.89:2.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie entgegneten: ",
+  "sn22.89:2.4": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: "
 }
