--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "sn22.89:1.10": "„Werter Freund, es geht mir nicht leidlich, ich komme nicht zurecht. Der Schmerz ist schrecklich und nimmt zu, er lässt nicht nach, ein Zunehmen ist erkennbar, kein Nachlassen.“ ",
   "sn22.89:2.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie entgegneten: ",
   "sn22.89:2.4": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
-  "sn22.89:2.5": "‚Werter Khemaka, die Altehrwürdigen sagen, "
+  "sn22.89:2.5": "‚Werter Khemaka, die Altehrwürdigen sagen, ",
+  "sn22.89:2.6": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich "
 }
