--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn22.89:2.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie entgegneten: ",
   "sn22.89:2.4": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
   "sn22.89:2.5": "‚Werter Khemaka, die Altehrwürdigen sagen, ",
-  "sn22.89:2.6": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich "
+  "sn22.89:2.6": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
+  "sn22.89:2.7": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. "
 }
