--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn22.89:2.7": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. ",
   "sn22.89:2.8": "Betrachtest du irgendeins dieser fünf mit Ergreifen verbundenen Aggregate als Selbst oder zu einem Selbst gehörig?‘“ ",
   "sn22.89:3.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: ",
-  "sn22.89:3.6": "„Vom Buddha wurden fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich "
+  "sn22.89:3.6": "„Vom Buddha wurden fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
+  "sn22.89:3.7": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. "
 }
