--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.89:3.6": "„Vom Buddha wurden fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
   "sn22.89:3.7": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. ",
   "sn22.89:3.8": "Ich betrachte keins dieser fünf mit Ergreifen verbundenen Aggregate als Selbst oder zum Selbst gehörig.“ ",
-  "sn22.89:4.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: "
+  "sn22.89:4.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: ",
+  "sn22.89:4.6": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: "
 }
