--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn22.89:4.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: ",
   "sn22.89:4.6": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
   "sn22.89:4.7": "‚Werter Khemaka, die Altehrwürdigen sagen, ",
-  "sn22.89:4.8": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich "
+  "sn22.89:4.8": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
+  "sn22.89:4.9": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. "
 }
