--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -28,5 +28,6 @@
   "sn22.89:4.8": "vom Buddha seien fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
   "sn22.89:4.9": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. ",
   "sn22.89:4.10": "Wenn der Ehrwürdige Khemaka, wie es scheint, keins dieser fünf mit Ergreifen verbundenen Aggregate als Selbst oder zum Selbst gehörig betrachtet, ",
-  "sn22.89:4.11": "dann ist er ein Vollendeter, der die Befleckungen aufgelöst hat.‘“ "
+  "sn22.89:4.11": "dann ist er ein Vollendeter, der die Befleckungen aufgelöst hat.‘“ ",
+  "sn22.89:5.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: "
 }
