--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "sn22.89:5.6": "„Vom Buddha wurden fünf mit Ergreifen verbundene Aggregate gelehrt worden: nämlich ",
   "sn22.89:5.7": "das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. ",
   "sn22.89:5.8": "Ich betrachte keins dieser fünf mit Ergreifen verbundenen Aggregate als Selbst oder zum Selbst gehörig, doch ich bin kein Vollendeter, der die Befleckungen aufgelöst hat. ",
-  "sn22.89:5.9": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘.“ "
+  "sn22.89:5.9": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘.“ ",
+  "sn22.89:6.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: "
 }
