--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.89:5.8": "Ich betrachte keins dieser fünf mit Ergreifen verbundenen Aggregate als Selbst oder zum Selbst gehörig, doch ich bin kein Vollendeter, der die Befleckungen aufgelöst hat. ",
   "sn22.89:5.9": "Denn in Bezug auf die fünf mit Ergreifen verbundenen Aggregate bin ich von der Einbildung ‚ich bin‘ nicht frei. Aber ich betrachte nichts als ‚ich bin das‘.“ ",
   "sn22.89:6.1": "Da ging Dāsaka zu diesen Altehrwürdigen und übermittelte Khemakas Antwort. Sie sagten: ",
-  "sn22.89:7.1": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: "
+  "sn22.89:7.1": "„Bitte, werter Dāsaka, gehe zu dem Mönch Khemaka und sage zu ihm: ",
+  "sn22.89:7.2": "‚Werter Khemaka, die Altehrwürdigen fragen, "
 }
