--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn22.89:7.3": "Wovon sprichst du, wenn du ‚ich bin‘ sagst? ",
   "sn22.89:7.4": "Ist es Form oder ist es außerhalb von Form? ",
   "sn22.89:7.5": "Ist es Gefühl … ",
-  "sn22.89:7.6": "Wahrnehmung … "
+  "sn22.89:7.6": "Wahrnehmung … ",
+  "sn22.89:7.7": "Entscheidungen … "
 }
