--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.89_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.89:7.7": "Entscheidungen … ",
   "sn22.89:7.8": "Bewusstsein, oder ist es außerhalb von Bewusstsein? ",
   "sn22.89:7.9": "Wovon sprichst du, wenn du „ich bin“ sagst?‘“ ",
-  "sn22.89:8.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: "
+  "sn22.89:8.1": "„Ja, werte Freunde“, antwortete Dāsaka. Er überbrachte dem Ehrwürdigen Khemaka ihre Botschaft, und dieser antwortete: ",
+  "sn22.89:8.10": "„Genug, werter Dāsaka! Wozu dieses Hin- und Herrennen? "
 }
