--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "sn22.94:1.4": "Wovon die Klugen sich einig sind, dass es es nicht gibt, davon sage auch ich: Es gibt es nicht. ",
   "sn22.94:1.5": "Wovon die Klugen sich einig sind, dass es es gibt, davon sage auch ich: Es gibt es. ",
   "sn22.94:2.1": "Und wovon sind die Klugen sich einig, dass es es nicht gibt, und auch ich sage: Es gibt es nicht? ",
-  "sn22.94:2.2": "Form, die beständig, immerwährend und ewig ist und nicht vergehen muss. ",
+  "sn22.94:2.2": "Form, die beständig, immerwährend und ewig ist und nicht vergehen muss – ",
   "sn22.94:2.3": "Gefühl … ",
   "sn22.94:2.4": "Wahrnehmung … ",
   "sn22.94:2.5": "Entscheidungen … ",
