--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn22.94:5.1": "Und was ist diese weltliche Erscheinung in der Welt? ",
   "sn22.94:5.2": "Form ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. ",
   "sn22.94:5.3": "Dann erklärt er sie, lehrt sie, stellt sie fest, etabliert sie, stellt sie klar, gliedert sie auf und enthüllt sie. ",
-  "sn22.94:6.1": "Da das so ist, was kann ich da mit einem törichten gewöhnlichen Menschen machen, der blind und ohne Sehvermögen ist, der das nicht erkennt und sieht? "
+  "sn22.94:6.1": "Da das so ist, was kann ich da mit einem törichten gewöhnlichen Menschen machen, der blind und ohne Sehvermögen ist, der das nicht erkennt und sieht? ",
+  "sn22.94:6.2": "Gefühl ist eine weltliche Erscheinung in der Welt … "
 }
