--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn22.94:6.1": "Da das so ist, was kann ich da mit einem törichten gewöhnlichen Menschen machen, der blind und ohne Sehvermögen ist, der das nicht erkennt und sieht? ",
   "sn22.94:6.2": "Gefühl ist eine weltliche Erscheinung in der Welt … ",
   "sn22.94:6.3": "Wahrnehmung ist eine weltliche Erscheinung in der Welt … ",
-  "sn22.94:6.4": "Entscheidungen sind weltliche Erscheinungen in der Welt … "
+  "sn22.94:6.4": "Entscheidungen sind weltliche Erscheinungen in der Welt … ",
+  "sn22.94:6.5": "Bewusstsein ist eine weltliche Erscheinung in der Welt, die der Klargewordene versteht und erfasst. "
 }
