--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.94_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.94:2.4": "Wahrnehmung … ",
   "sn22.94:2.5": "Entscheidungen … ",
   "sn22.94:2.6": "Bewusstsein, das beständig, immerwährend und ewig ist und nicht vergehen muss – ",
-  "sn22.94:2.7": "davon sind die Klugen sich einig, dass es es nicht gibt, und auch ich sage: Es gibt es nicht. ",
+  "sn22.94:2.7": "davon sind die Klugen sich einig, dass es sie nicht gibt, und auch ich sage: Es gibt sie nicht. ",
   "sn22.94:3.1": "Und wovon sind die Klugen sich einig, dass es es gibt, und auch ich sage: Es gibt es? ",
   "sn22.94:3.2": "Form, die unbeständig und Leiden ist und zugrunde gehen muss – ",
   "sn22.94:3.3": "Gefühl … Wahrnehmung … Entscheidungen … ",
