--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn22.95:0.1": "Verbundene Lehrreden 22.95 ",
   "sn22.95:0.2": "10. Das Kapitel über Blumen ",
   "sn22.95:0.3": "Ein Schaumklümpchen ",
-  "sn22.95:1.1": "Einmal hielt sich der Buddha bei Ayojjhā am Ufer des Ganges auf. "
+  "sn22.95:1.1": "Einmal hielt sich der Buddha bei Ayojjhā am Ufer des Ganges auf. ",
+  "sn22.95:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: "
 }
