--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -4,6 +4,6 @@
   "sn22.95:0.3": "Ein Schaumklumpen ",
   "sn22.95:1.1": "Einmal hielt sich der Buddha bei Ayojjhā am Ufer des Ganges auf. ",
   "sn22.95:1.2": "Da wandte sich der Buddha an die Mönche und Nonnen: ",
-  "sn22.95:2.1": "„Mönche und Nonnen, wie wenn dieser Ganges einen großen Schaumklumpen mit sich führen würde und ein Mensch mit gutem Sehvermögen sähe ihn, betrachtete ihn und untersuchte ihn sorgfältig: Er würde ihm vollständig leer, hohl und substanzlos erscheinen. Denn welche Substanz kann da in einem Schaumklumpen sein? ",
+  "sn22.95:2.1": "„Mönche und Nonnen, wie wenn dieser Ganges einen großen Schaumklumpen mit sich führen würde, und ein Mensch mit gutem Sehvermögen sähe ihn, betrachtete ihn und untersuchte ihn sorgfältig: Er würde ihm vollständig leer, hohl und substanzlos erscheinen. Denn welche Substanz kann da in einem Schaumklumpen sein? ",
   "sn22.95:2.2": "Ebenso sieht und betrachtet da ein Mönch jegliche Art von Form und untersucht sie sorgfältig – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliche Form –, und sie erscheint ihm vollständig leer, hohl und substanzlos. Denn welche Substanz kann da in Form sein? "
 }
