--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.95:6.2": "Ebenso sieht und betrachtet da ein Mönch jegliche Art von Bewusstsein und untersucht es sorgfältig – vergangen, zukünftig oder gegenwärtig, innen oder außen, grob oder fein, gering oder hochstehend, fern oder nah: jegliches Bewusstsein –, und es erscheint ihm vollständig leer, hohl und substanzlos. Denn welche Substanz kann da in Bewusstsein sein? ",
   "sn22.95:7.1": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
   "sn22.95:7.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
-  "sn22.95:7.3": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ "
+  "sn22.95:7.3": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
+  "sn22.95:8.1": "Das sagte der Buddha. "
 }
