--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.95:7.1": "Wenn er das sieht, wird ein gebildeter edler Schüler ernüchtert von Form, Gefühl, Wahrnehmung, Entscheidungen und Bewusstsein. ",
   "sn22.95:7.2": "Wenn er ernüchtert ist, schwindet die Leidenschaft. Wenn die Leidenschaft schwindet, ist er befreit. Wenn er befreit ist, weiß er, dass er befreit ist. ",
   "sn22.95:7.3": "Er versteht: ‚… es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.‘“ ",
-  "sn22.95:8.1": "Das sagte der Buddha. "
+  "sn22.95:8.1": "Das sagte der Buddha. ",
+  "sn22.95:8.2": "Und der Heilige, der Lehrer, fuhr fort: "
 }
