--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -22,5 +22,6 @@
   "sn22.95:9.1": "„Form ist wie ein Schaumklumpen; ",
   "sn22.95:9.2": "Gefühl ist wie eine Blase; ",
   "sn22.95:9.3": "Wahrnehmung ist wie eine Fata Morgana; ",
-  "sn22.95:9.4": "Entscheidungen sind wie ein Bananenbaum; "
+  "sn22.95:9.4": "Entscheidungen sind wie ein Bananenbaum; ",
+  "sn22.95:9.5": "und Bewusstsein ist wie ein Zaubertrick: "
 }
