--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -25,5 +25,5 @@
   "sn22.95:9.4": "Entscheidungen sind wie ein Bananenbaum; ",
   "sn22.95:9.5": "und Bewusstsein ist wie ein Zaubertrick: ",
   "sn22.95:9.6": "So lehrte er, der aus dem Stamm der Sonne kommt. ",
-  "sn22.95:10.1": "Wie man sie auch betrachtet, "
+  "sn22.95:10.1": "Wie man sie auch betrachtet "
 }
