--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.95:9.5": "und Bewusstsein ist wie ein Zaubertrick: ",
   "sn22.95:9.6": "So lehrte er, der aus dem Stamm der Sonne kommt. ",
   "sn22.95:10.1": "Wie man sie auch betrachtet ",
-  "sn22.95:10.2": "und sorgfältig untersucht, "
+  "sn22.95:10.2": "und sorgfältig untersucht, ",
+  "sn22.95:10.3": "sie sind leer und hohl, "
 }
