--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -37,5 +37,6 @@
   "sn22.95:12.2": "Wenn sie den Körper verlassen, ",
   "sn22.95:12.3": "liegt er weggestoßen da, ",
   "sn22.95:12.4": "geistlos, wird von anderen gefressen. ",
-  "sn22.95:13.1": "So ist dieser Vorgang, "
+  "sn22.95:13.1": "So ist dieser Vorgang, ",
+  "sn22.95:13.2": "dieses Blendwerk, wegen dem die Toren gurren. "
 }
