--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "sn22.95:12.3": "liegt er weggestoßen da, ",
   "sn22.95:12.4": "geistlos, wird von anderen gefressen. ",
   "sn22.95:13.1": "So ist dieser Vorgang, ",
-  "sn22.95:13.2": "dieses Blendwerk, wegen dem die Toren gurren. "
+  "sn22.95:13.2": "dieses Blendwerk, wegen dem die Toren gurren. ",
+  "sn22.95:13.3": "Er gilt als Mörder, "
 }
