--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn22.95:13.1": "So ist dieser Vorgang, ",
   "sn22.95:13.2": "dieses Blendwerk, wegen dem die Toren gurren. ",
   "sn22.95:13.3": "Er gilt als Mörder, ",
-  "sn22.95:13.4": "denn man findet in ihm keinen Kern. "
+  "sn22.95:13.4": "denn man findet in ihm keinen Kern. ",
+  "sn22.95:14.1": "Ein energischer Mönch "
 }
