--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -43,5 +43,6 @@
   "sn22.95:13.4": "denn man findet in ihm keinen Kern. ",
   "sn22.95:14.1": "Ein energischer Mönch ",
   "sn22.95:14.2": "soll so die Aggregate untersuchen, ",
-  "sn22.95:14.3": "bei Tag und Nacht "
+  "sn22.95:14.3": "bei Tag und Nacht ",
+  "sn22.95:14.4": "umsichtig und achtsam. "
 }
