--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn22.95:14.2": "soll so die Aggregate untersuchen, ",
   "sn22.95:14.3": "bei Tag und Nacht ",
   "sn22.95:14.4": "umsichtig und achtsam. ",
-  "sn22.95:15.1": "Er soll alle Fesseln aufgeben "
+  "sn22.95:15.1": "Er soll alle Fesseln aufgeben ",
+  "sn22.95:15.2": "und sich eine Zuflucht bereiten. "
 }
