--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.95_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.95:14.4": "umsichtig und achtsam. ",
   "sn22.95:15.1": "Er soll alle Fesseln aufgeben ",
   "sn22.95:15.2": "und sich eine Zuflucht bereiten. ",
-  "sn22.95:15.3": "Er soll leben, als stünde sein Kopf in Flammen, "
+  "sn22.95:15.3": "Er soll leben, als stünde sein Kopf in Flammen, ",
+  "sn22.95:15.4": "und nach dem Zustand der Unsterblichkeit streben.“ "
 }
